2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* smime.el (smime-make-temp-file): Don't quote
	`temporary-file-directory'.

2002-03-04  Simon Josefsson  <jas@extundo.com>

	* smime.el (smime-sign-region): Rename argument keyfiles to
	keyfile. You only sign something with one key.
	(smime-sign-buffer): Better completing-read prompt.
	(smime-decrypt-buffer): Ditto.

	* smime.el (smime-make-temp-file): Make it work under XEmacs.

	* mm-view.el (mm-view-pkcs7-decrypt): Better prompt for
	completing-read.
	(mm-view-pkcs7-decrypt): CRLF->LF.

2002-03-04  Paul Jarc  <prj@po.cwru.edu>

	* message.el (message-hierarchical-addresses): New variable.
	(message-get-reply-headers): Use it.
	From Ted Zlatanov <teodor.zlatanov@divine.com>

2002-03-03  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-mode): If buffer-file-name, don't set auto
	save file name.
	From Geoff Greene <ggreene@wpi.edu>

2002-03-02  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-util.el (gnus-multiple-choice): Use message. XEmacs only
	takes one argument in read-char.

	* message.el (message-fix-before-sending): Forward a char.
	Check mmu-multibyte-p, add control-1.

2002-03-01  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* gnus-start.el (gnus-read-init-file): Ditto.

	* gnus-agent.el (gnus-agent-fetch-session): Ditto.

	* dgnushack.el (dgnushack-make-load): Ditto.

	* mail-source.el (mail-source-fetch): Extract the right error
	code.

	* message.el (message-fix-before-sending): Check illegible text.

	* gnus-util.el (gnus-multiple-choice): New function.

	* gnus-kill.el (gnus-score-insert-help): Removed, because it is
	also defined in gnus-score.el.

2002-03-01  Paul Jarc  <prj@po.cwru.edu>

	* message.el (message-get-reply-headers): downcase email addresses
	for comaparisons for duplicate removal.

2002-03-01  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* mm-view.el (mm-view-pkcs7-verify): New function. A bogus
	implementation of PKCS#7, which just allows users read the
	message.