@@ -1,3 +1,9 @@
+2002-03-04  Paul Jarc  <prj@po.cwru.edu>
+
+	* message.el (nnmaildir-article-number-to-base-name): New
+	function.
+	(nnmaildir-base-name-to-article-number): New function.
+
 2002-03-04  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* smime.el (smime-make-temp-file): Don't quote
